[package]
name = "no-node-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.10.0"
bitcoin = "0.30.1"
lambda_http = { version = "0.8.1", optional = true }
lambda_runtime = { version = "0.8.1", optional = true }
serde = "1.0.183"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
arc-lightning-client = { path = "../arc-contract-kernel/arc-lightning-client" }

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http"]

[[bin]]
name = "hello_world"
path = "src/functions/hello_world.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "address_valid"
path = "src/functions/address_valid.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "ln_pubkey"
path = "src/functions/ln_pubkey.rs"
test = false
required-features = ["lambda"]
